# VDOC

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
videomarker/: .env.example  CONTRIBUTING.md  MARKDIRECTORY_SPEC.md  README.md  SECURITY.md  __init__.py  pyproject.toml
videomarker/.github/workflows/: ci.yml
videomarker/agent/: __init__.py
videomarker/api/: __init__.py  server.py
videomarker/cli/: __init__.py  main.py
videomarker/config/: __init__.py  manager.py  settings.py
videomarker/cookiecutter-plugin/: cookiecutter.json
videomarker/cookiecutter-plugin/{{cookiecutter.plugin_name}}/: README.md  __init__.py  plugin.py  pyproject.toml
videomarker/cookiecutter-plugin/{{cookiecutter.plugin_name}}/tests/: test_plugin.py
videomarker/core/: __init__.py  builder.py  detector.py  extractor.py  pipeline.py  plugin.py  processor.py  provider.py  renderer.py
videomarker/detectors/: __init__.py  scene.py
videomarker/docker/: Dockerfile  docker-compose.yml
videomarker/docs/: ARCHITECTURE.md  CODING_STANDARDS.md  CONTRIBUTOR_ROADMAP.md  DESIGN_PRINCIPLES.md  EXTENSION_GUIDE.md  PLUGIN_TUTORIAL.md  PROVIDER_TUTORIAL.md  SEQUENCE.md  TROUBLESHOOTING.md
videomarker/docs/api/: asset_manager.md  base.md  benchmark_service.md  bus.md  cache_manager.md  document.md  embedding.md  engine.md  export_service.md  faiss_provider.md  ffmpeg.md  file_service.md  files.md  graph.md  html_renderer.md  index.md  json_renderer.md  llm.md  loader.md  main.md  manager.md  markdirectory.md  markdown.md  media.md  media_service.md  memory_monitor.md  ocr.md  openapi.md  orchestrator.md  paddle.md  pipeline_service.md  provider.md  provider_service.md  registry.md  render.md  scene.md  search_index.md  sentence.md  speech.md  timing.md  (+5 more)
videomarker/docs/guides/: plugin_development.md
videomarker/examples/: sample_plugin.py
videomarker/extractors/: __init__.py  audio.py  frame.py
videomarker/knowledge/: __init__.py  graph.py
videomarker/models/: __init__.py  knowledge.py  layout.py  markdirectory.py  ocr.py  search.py  segment.py  semantic.py  transcript.py  video.py  vision.py
videomarker/models/document/: document.py
videomarker/pipeline/: __init__.py  base.py  orchestrator.py
videomarker/pipeline/stages/: llm.py  ocr.py  render.py  scene.py  video.py
videomarker/plugins/: __init__.py  loader.py
videomarker/processors/: __init__.py  ocr.py  semantic.py  transcript.py  vision.py
videomarker/providers/: __init__.py  ffmpeg.py
videomarker/providers/base/: __init__.py  provider.py
videomarker/providers/embedding/: base.py
videomarker/providers/llm/: base.py  openai_compatible.py
videomarker/providers/ocr/: __init__.py  paddle.py
videomarker/providers/video/: __init__.py  ffmpeg.py
videomarker/providers/vision/: __init__.py  base.py
videomarker/renderers/: __init__.py  base.py  html_renderer.py  json_renderer.py  markdirectory.py  markdown.py
videomarker/scripts/: generate_docs.py  setup.sh
videomarker/search/: __init__.py  embeddings.py
videomarker/tests/integration/: test_pipeline.py  test_services.py
videomarker/tests/unit/: test_config.py  test_events.py  test_models.py  test_plugin.py  test_providers.py  test_services.py  test_settings.py  test_timeline.py
videomarker/vdoc/: __init__.py
videomarker/vdoc/agent/: __init__.py  base.py  orchestrator.py
videomarker/vdoc/api/: __init__.py  server.py
videomarker/vdoc/cli/: __init__.py  main.py
videomarker/vdoc/config/: __init__.py  manager.py  validator.py
videomarker/vdoc/events/: __init__.py  bus.py
videomarker/vdoc/knowledge/: __init__.py
videomarker/vdoc/models/: __init__.py
videomarker/vdoc/models/document/: __init__.py  document.py
videomarker/vdoc/pipeline/: __init__.py  base.py  orchestrator.py  registry.py
videomarker/vdoc/pipeline/stages/: __init__.py  embedding.py  llm.py  ocr.py  render.py  scene.py  speech.py  (+3 more)
videomarker/vdoc/plugins/: __init__.py  loader.py
videomarker/vdoc/prompts/: __init__.py
videomarker/vdoc/providers/: __init__.py  registry.py
videomarker/vdoc/renderers/: __init__.py  base.py  html_renderer.py  json_renderer.py  markdirectory.py  markdown.py  registry.py
videomarker/vdoc/sdk/: __init__.py  decorators.py  exceptions.py
videomarker/vdoc/search/: __init__.py  engine.py
videomarker/vdoc/services/: __init__.py  asset_manager.py  benchmark_service.py  cache_manager.py  export_service.py  file_service.py  media_service.py  memory_monitor.py  pipeline_service.py  provider_service.py  timing_service.py
videomarker/vdoc/utils/: __init__.py  files.py  media.py
videomarker/videomarker/agent/: base.py  orchestrator.py
videomarker/videomarker/config/: manager.py
videomarker/videomarker/knowledge/: __init__.py
videomarker/videomarker/pipeline/: __init__.py
videomarker/videomarker/plugins/: __init__.py
videomarker/videomarker/providers/: registry.py
videomarker/videomarker/renderers/: __init__.py
videomarker/videomarker/search/: engine.py
videomarker/videomarker/utils/: __init__.py  timing.py
videomarker/webui/: package.json  tailwind.config.ts
(+87 files in other folders)
