[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videomarker"
version = "0.1.0"
description = "Convert videos into structured MarkDirectory — the Marker equivalent for video"
readme = "README.md"
authors = [
    { name = "VideoMarker Contributors" },
]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["video", "markdown", "ocr", "transcription", "scene-detection", "markdirectory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.9.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "scenedetect[opencv]>=0.6.2",
    "ffmpeg-python>=0.2.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "orjson>=3.9.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.0",
    "jinja2>=3.1.0",
    "Pillow>=10.1.0",
    "tqdm>=4.66.0",
    "structlog>=24.1.0",
    "pluggy>=1.3.0",
]

[project.optional-dependencies]
all = [
    "videomarker[gpu,audio,ocr,vision,search,api]",
]
gpu = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
]
audio = [
    "faster-whisper>=1.0.0",
]
ocr = [
    "paddleocr>=2.7.0",
]
vision = [
    "transformers>=4.36.0",
    "sentencepiece>=0.1.99",
]
search = [
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
]
api = [
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "httpx>=0.25.0",
]

[project.scripts]
videomarker = "videomarker.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["videomarker*"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
