[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vdoc"
version = "1.0.0"
description = "Video document understanding framework — convert videos to structured MarkDirectory format"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["video", "document", "markdown", "transcription", "ocr", "vision", "ml"]
authors = [
    {name = "VDOC Contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "click>=8.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-multipart>=0.0.6",
    "websockets>=11.0",
    "Jinja2>=3.0.0",
    "httpx>=0.24.0",
]
[project.optional-dependencies]
providers = ["openai>=1.0.0"]
search = ["faiss-cpu>=1.7.0"]
all = [
    "openai>=1.0.0",
    "faiss-cpu>=1.7.0",
    "psutil>=5.0.0",
    "cookiecutter>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "psutil>=5.0.0",
    "cookiecutter>=2.0.0",
]

[project.scripts]
vdoc = "vdoc.cli.main:app"

[tool.setuptools.packages.find]
include = ["vdoc*"]

[tool.setuptools.package-data]
vdoc = ["prompts/**/*", "py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
