[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "{{cookiecutter.python_package}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = [
    {name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "vdoc",
]
{% if cookiecutter.openai_compatible %}
dynamic = ["dependencies"]
{% endif %}

[project.entry-points."vdoc.plugins"]
{{cookiecutter.plugin_name}} = "{{cookiecutter.python_package}}"
